[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Associated Token Account Program Tests"
edition = "2021"
license = "Apache-2.0"
name = "spl-associated-token-account-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-sbf = []

[dev-dependencies]
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-associated-token-account = { path = "../program", features = ["no-entrypoint"] }
spl-token = { path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { path = "../../token/program-2022", features = ["no-entrypoint"] }
