[package]
name = "spl-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = "2.33.3"
solana-clap-utils = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-clap-utils" }
solana-cli-config = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-config" }
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-logger = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-logger" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-feature-proposal = { path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
