[package]
name = "spl-governance"
version = "3.1.1"
description = "Solana Program Library Governance Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.2"
borsh = "0.10"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.193"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
spl-governance-tools= { path ="../tools"}
spl-governance-addin-api= { path ="../addin-api"}
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.21"
proptest = "1.4"
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-governance-test-sdk = { path ="../test-sdk"}
spl-governance-addin-mock = { path ="../addin-mock/program"}


[lib]
crate-type = ["cdylib", "lib"]
