[package]
name = "spl-program-error"
version = "0.3.0"
description = "Library for Solana Program error attributes and derive macro for creating them"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-program-error-derive = { path = "./derive" }
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4"
serial_test = "2.0"
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
