[package]
name = "spl-tlv-account-resolution"
version = "0.5.0"
description = "Solana Program Library TLV Account Resolution Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-discriminator = { path = "../discriminator" }
spl-program-error = { path = "../program-error" }
spl-type-length-value = { path = "../type-length-value" }
spl-pod = { path = "../pod" }

[dev-dependencies]
futures = "0.3.29"
futures-util = "0.3"
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-discriminator = { path = "../discriminator" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
