[package]
name = "spl-type-length-value"
version = "0.3.0"
description = "Solana Program Library Type-Length-Value Management"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
derive = ["dep:spl-type-length-value-derive"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-discriminator = { path = "../discriminator" }
spl-program-error = { path = "../program-error" }
spl-type-length-value-derive = { path = "./derive", optional = true }
spl-pod = { path = "../pod" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
