[package]
name = "spl-single-pool-cli"
version = "1.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.35"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.15.7"
borsh = "0.10"
bincode = "1.3.1"
serde = "1.0.193"
serde_derive = "1.0.103"
serde_json = "1.0.108"
serde_with = "3.4.0"
solana-account-decoder = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-account-decoder" }
solana-clap-v3-utils = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-clap-v3-utils" }
solana-cli-config = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-config" }
solana-cli-output = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-output" }
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-logger = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-logger" }
solana-remote-wallet = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-remote-wallet" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
solana-transaction-status = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-transaction-status" }
solana-vote-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-vote-program" }
spl-token = { path="../../token/program", features = [ "no-entrypoint" ] }
spl-token-client = { path="../../token/client" }
spl-associated-token-account = { path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-single-pool = { path="../program", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-test-validator = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-test-validator" }
serial_test = "2.0.0"
test-case = "3.3"
tempfile = "3.8.1"

[[bin]]
name = "spl-single-pool"
path = "src/main.rs"
