[package]
name = "spl-single-pool"
version = "1.0.0"
description = "Solana Program Library Single-Validator Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
borsh = "0.10"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.1"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-token = { version = "4.0", path = "../../token/program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
solana-vote-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-vote-program" }
test-case = "3.3"
bincode = "1.3.1"
rand = "0.8.5"
approx = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]
