[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "1.0.0"

[dependencies]
borsh = "0.10"
clap = "2.33.3"
serde = "1.0.193"
serde_derive = "1.0.130"
serde_json = "1.0.108"
solana-account-decoder = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-account-decoder" }
solana-clap-utils = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-clap-utils" }
solana-cli-config = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-config" }
solana-cli-output = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-output" }
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-logger = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-logger" }
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
solana-remote-wallet = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-remote-wallet" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-associated-token-account = { path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
