[package]
name = "spl-stake-pool"
version = "1.0.0"
description = "Solana Program Library Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
borsh = "0.10"
bytemuck = "1.13"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.1"
serde = "1.0.193"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
solana-security-txt = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-security-txt" }
spl-math = { path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-pod = { path = "../../libraries/pod", features = ["borsh"] }
spl-token-2022 = { path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.4"
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
solana-vote-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-vote-program" }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]
