[package]
name = "spl-token-collection"
version = "0.1.0"
description = "Solana Program Library Token Collection"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-pod = { path = "../../libraries/pod" }
spl-program-error = { path = "../../libraries/program-error" }
spl-token-2022 = { path = "../../token/program-2022", features = ["no-entrypoint"] }
spl-token-group-example = { path = "../../token-group/example", features = ["no-entrypoint"] }
spl-token-group-interface = { path = "../../token-group/interface" }
spl-token-metadata-interface = { path = "../../token-metadata/interface" }
spl-type-length-value = { path = "../../libraries/type-length-value" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-discriminator = { path = "../../libraries/discriminator" }
spl-token-client = { path = "../../token/client" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
