[package]
name = "flash_loan_receiver"
version = "1.0.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-token = { path = "../../token/program", features=["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
