[package]
name = "spl-token-metadata-example"
version = "0.2.0"
description = "Solana Program Library Token Metadata Example Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-token-2022 = { path = "../../token/program-2022", features = ["no-entrypoint"] }
spl-token-metadata-interface = { path = "../interface" }
spl-type-length-value = { path = "../../libraries/type-length-value" }
spl-pod = { path = "../../libraries/pod" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-token-client = { path = "../../token/client" }
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
