[package]
name = "spl-token-metadata-interface"
version = "0.2.0"
description = "Solana Program Library Token Metadata Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde", "spl-pod/serde-traits"]

[dependencies]
borsh = "0.10"
serde = { version = "1.0.193", optional = true }
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-discriminator = { path = "../../libraries/discriminator" }
spl-program-error = { path = "../../libraries/program-error" }
spl-type-length-value = { path = "../../libraries/type-length-value" }
spl-pod = { path = "../../libraries/pod", features = ["borsh"] }

[dev-dependencies]
serde_json = "1.0.108"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
