[package]
name = "spl-token-upgrade-cli"
version = "0.1.1"
description = "SPL Token Upgrade Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
walkdir = "2"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.28"
solana-clap-v3-utils = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-clap-v3-utils" }
solana-cli-config = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-config" }
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-logger = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-logger" }
solana-remote-wallet = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-remote-wallet" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
spl-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", path = "../../token/program-2022", features = ["no-entrypoint"] }
spl-token-client = { version = "0.8", path = "../../token/client" }
spl-token-upgrade = { version = "0.1", path = "../program", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-test-validator" }

[[bin]]
name = "spl-token-upgrade"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
