[package]
name = "spl-token-upgrade"
version = "0.1.1"
description = "Solana Program Library Token Upgrade"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.1"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-token-2022 = { path = "../../token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-token = { path = "../../token/program", features = ["no-entrypoint"] }
spl-token-client = { path = "../../token/client" }
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
