[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "3.3.0"

[build-dependencies]
walkdir = "2"

[dependencies]
base64 = "0.21.5"
clap = "2.33.3"
console = "0.15.7"
futures = "0.3"
serde = "1.0.193"
serde_derive = "1.0.103"
serde_json = "1.0.108"
solana-account-decoder = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-account-decoder" }
solana-clap-utils = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-clap-utils" }
solana-cli-config = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-config" }
solana-cli-output = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-output" }
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-logger = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-logger" }
solana-remote-wallet = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-remote-wallet" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
solana-transaction-status = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-transaction-status" }
spl-token = { path = "../program", features = [
  "no-entrypoint",
] }
spl-token-2022 = { path = "../program-2022", features = [
  "no-entrypoint",
] }
spl-token-client = { path = "../client" }
spl-token-metadata-interface = { path = "../../token-metadata/interface" }
spl-associated-token-account = { path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
spl-memo = { path = "../../memo/program", features = [
  "no-entrypoint",
] }
strum = "0.25"
strum_macros = "0.25"
tokio = "1.35"

[dev-dependencies]
solana-test-validator = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-test-validator" }
assert_cmd = "2.0.12"
libtest-mimic = "0.6"
serial_test = "2.0.0"
tempfile = "3.8.1"

[[bin]]
name = "spl-token"
path = "src/main.rs"

[[test]]
name = "command"
path = "tests/command.rs"
harness = false
