[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Rust Client"
edition = "2021"
license = "Apache-2.0"
name = "spl-token-client"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.8.0"

[dependencies]
async-trait = "0.1"
curve25519-dalek = "3.2.1"
futures = "0.3.29"
futures-util = "0.3"
solana-banks-interface = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-banks-interface" }
solana-cli-output = { version = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-output = { version" }, optional = true }
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-rpc-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-rpc-client" }
solana-rpc-client-api = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-rpc-client-api" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
# We never want the entrypoint for ATA, but we want the entrypoint for token when
# testing token
spl-associated-token-account = { path = "../../associated-token-account/program", features = ["no-entrypoint"] }
spl-memo = { path = "../../memo/program", features = ["no-entrypoint"] }
spl-token = { path="../program", features = [ "no-entrypoint" ] }
spl-token-2022 = { path="../program-2022" }
spl-token-group-interface = { path="../../token-group/interface" }
spl-token-metadata-interface = { path="../../token-metadata/interface" }
spl-transfer-hook-interface = { path="../transfer-hook/interface" }
thiserror = "1.0"

[features]
default = ["display"]
display = ["dep:solana-cli-output"]
