[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token 2022 Integration Tests"
edition = "2021"
license = "Apache-2.0"
name = "spl-token-2022-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-sbf = ["zk-ops"]
default = ["zk-ops"]
zk-ops = []

[build-dependencies]
walkdir = "2"

[dev-dependencies]
async-trait = "0.1"
borsh = "0.10"
futures-util = "0.3"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-associated-token-account = { path = "../../associated-token-account/program" }
spl-memo = { path = "../../memo/program", features = ["no-entrypoint"] }
spl-pod = { path = "../../libraries/pod" }
spl-token-2022 = { path="../program-2022", features = ["no-entrypoint"] }
spl-instruction-padding = { path="../../instruction-padding/program", features = ["no-entrypoint"] }
spl-token-client = { path = "../client" }
spl-token-group-interface = { path = "../../token-group/interface" }
spl-token-metadata-interface = { path = "../../token-metadata/interface" }
spl-transfer-hook-example = { path="../transfer-hook/example", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { path="../transfer-hook/interface" }
test-case = "3.3"
