[package]
name = "spl-token-2022"
version = "1.0.0"
description = "Solana Program Library Token 2022"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-sbf = []
serde-traits = ["dep:serde", "dep:serde_with", "dep:base64", "spl-pod/serde-traits"]
default = ["token-group", "zk-ops"]
# Remove this feature once the underlying syscalls are released on all networks
zk-ops = []
# Remove this feature once the token group implementation has been audited
token-group = []

[dependencies]
arrayref = "0.3.7"
bytemuck = { version = "1.14.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.1"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
solana-security-txt = "1.1.1"
solana-zk-token-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-zk-token-sdk" }
spl-memo = { path = "../../memo/program", features = [ "no-entrypoint" ] }
spl-token = { path = "../program", features = ["no-entrypoint"] }
spl-token-group-interface = { path = "../../token-group/interface" }
spl-token-metadata-interface = { path = "../../token-metadata/interface" }
spl-transfer-hook-interface = { path = "../transfer-hook/interface" }
spl-type-length-value = { path = "../../libraries/type-length-value" }
spl-pod = { path = "../../libraries/pod" }
thiserror = "1.0"
serde = { version = "1.0.193", optional = true }
serde_with = { version = "3.4.0", optional = true }
base64 = { version = "0.21.5", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.4"
serial_test = "2.0.0"
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
serde_json = "1.0.108"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
