[package]
name = "spl-example-cross-program-invocation"
version = "1.0.0"
description = "Solana Program Library Cross Program Invocation Example"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
