[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-transfer-hook-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
solana-clap-v3-utils = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-clap-v3-utils" }
solana-cli-config = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-cli-config" }
solana-client = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-client" }
solana-logger = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-logger" }
solana-remote-wallet = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-remote-wallet" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }
spl-transfer-hook-interface = { path = "../interface" }
spl-tlv-account-resolution = { path = "../../../libraries/tlv-account-resolution" }
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-test-validator" }
spl-token-2022 = { path = "../../program-2022", features = ["no-entrypoint"] }
spl-token-client = { path = "../../client" }

[[bin]]
name = "spl-transfer-hook"
path = "src/main.rs"
