[package]
name = "spl-transfer-hook-example"
version = "0.4.0"
description = "Solana Program Library Transfer Hook Example Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-tlv-account-resolution = { path = "../../../libraries/tlv-account-resolution" }
spl-token-2022 = { path = "../../program-2022", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { path = "../interface" }
spl-type-length-value = { path = "../../../libraries/type-length-value" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program-test" }
solana-sdk = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
