[package]
name = "spl-transfer-hook-interface"
version = "0.4.1"
description = "Solana Program Library Transfer Hook Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bytemuck = { version = "1.14.0", features = ["derive"] }
solana-program = { git = "https://github.com/zmovane/solana", branch = "fix/deps", package = "solana-program" }
spl-discriminator = { path = "../../../libraries/discriminator" }
spl-program-error = { path = "../../../libraries/program-error" }
spl-tlv-account-resolution = { path = "../../../libraries/tlv-account-resolution" }
spl-type-length-value = { path = "../../../libraries/type-length-value" }
spl-pod = { path = "../../../libraries/pod" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
